# fvs-publish-notify

./: .drone.yml  Cargo.toml
.github/workflows/: binary.yml  build.yml
src/: fvs.rs  main.rs  notify.rs
