[package]
name = "fvs-publish-notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.99"
log = "0.4.17"
env_logger = "0.11.3"
tokio = { version =  "1.27.0", features = ["rt-multi-thread", "macros", "fs"] }
anyhow = "1.0.72"
chrono = { version = "*", features = ["serde"] }
dotenv = "0.15.0"